# excel

./: .gitignore  .~lock.Quarterly_Report_2025-11-01.xlsx#  CLAUDE.md  Quarterly_Report_2025-11-01.xlsx  Quarterly_Savings_Report_Verify.csv  README.md  README_BUILD.md  build.py  clean_savings.py  dummy.xlsx  improvements.md  loan.py  loan_backup.py  pyproject.toml  requirements.txt  setup.iss  test2.py  test_analyze.py  test_fix.py  test_report.py  test_report_validation.py  test_statement.py  verify_report.py
.github/workflows/: python-app.yml
scratch/: GRACE MBURU_statement_20260411.html  Quarterly_Savings_Report.csv  verify_report.py
src/: __init__.py  branding.py  config.py  data_structures.py  database.py  dialogs.py  engine.py  exceptions.py  loan_action_controller.py  logging_setup.py  main.py  reports.py  result.py  statement_generator.py  theme.py  ui_state_manager.py
src/services/: __init__.py  balance_calculator.py  benevolent_service.py  christmas_service.py  excel_import.py  gl_service.py  loan_service.py  name_matcher.py  (+4 more)
tests/: conftest.py  debug_repayment_edit.py  test_audit_log.py  test_branding.py  test_crud_audit.py  test_date_filter.py  test_date_override.py  test_duplicate_detection.py  test_excel_import.py  test_fund_reports.py  test_funds.py  test_gl_service.py  test_import.py  test_import_preview.py  test_individual_fields.py  test_loan_collisions.py  test_loan_heal.py  test_mass_partial_failure.py  test_mass_undo.py  test_members_list.py  test_orphan_repair.py  test_provisioning.py  test_report_calculations.py  test_savings_enhancements.py  test_savings_recalc.py  test_savings_target_date.py  test_schema_validation.py  test_statement_customization.py  test_statement_optimization.py  test_statement_validation.py  test_suspension.py  test_theme.py  test_transaction_safety.py  test_undo_import.py  test_undo_manager.py  verify_giants.py  verify_import.py
(+4 files in other folders)
